flux/clusters/pinkdiamond/nix-system/ingress.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ncps
  namespace: nix-system
spec:
  parentRefs:
    - name: haproxy
      namespace: haproxy-ingress
  hostnames:
    - ncps.thecluster.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ncps
          port: 8501
